﻿1.1.7
+ Added ability to detect FB2 files by content, not by extension, when passed to converter (needed for FF plugin)
* The FF plugin rewriten to use js-ctypes instead of XPCOM as XPCOM required to recompile plugin each time SDK version changed,this also removes VS2010 compilation requirments

1.1.6
+ -= Added Firefox extension to use converter for "saveAs" FB2 dialogs =-
+ Added "Open" to File menu in GUI utility - another way to open files for convert selection dialog
+ Added resources and conversion process start/end markings to the log
+ Added progress bar and status progress reporting to GUI utility
+ Added Abort command to converter interface
+ Added abort button to GUI utility
+ Added "minizip" a build that can be run without installation
+ Added setup window call to external interface
+ Added code to GUI utility to check for update
+ Added installation of VS 2010 SP1 x86 redistributables, needed by Firefox extension
* Changed to not "loose" file name character cases when converting a file (passing in and out file name for a file)
* Changed the version treatment so time "seed" generated each time assembly compiled - to prevent problems when installing with same version different build
* Fixed the issue when elements of type Ignore (e.g. license.xhtml) were added to guide
* Increased Fb2epub.exe log size x10 since it can be used in huge conversions of a lot of files
* Changed progress reporting interface: dropped file counter report as in parallel processing it's meaningless
* Fixed extra space added to "File as" and other such strings
* Changed VS 2012 redist to Update 4 version


1.1.5
+ Added styling for <de> element for compatibility with some older readers/browsers
+ Added support for generation of Calibre metadata - used for some sorts, series etc.
+ Added new command line parameter "calibremeta:[0/1]" to enable/disable Calibre metadata generation