@@ -1,5 +1,6 @@
 ﻿1.1.7
 + Added ability to detect FB2 files by content, not by extension, when passed to converter (needed for FF plugin)
++ Added returning error from converter to FF plugin
 * The FF plugin rewriten to use js-ctypes instead of XPCOM as XPCOM required to recompile plugin each time SDK version changed,this also removes VS2010 compilation requirments
 
 1.1.6
